    - fastdwarf: new mode using debug flags, and some internal consistency fixes.
    - added a small stand-alone utility for applying and removing binary patches.
    - removebadthoughts: add --dry-run option
  New GUI scripts:
    - gui/guide-path: displays the cached path for minecart Guide orders.
    - gui/workshop-job: displays inputs of a workshop job and allows tweaking them.

DFHack v0.34.11-r2

  Internals:
    - full support for Mac OS X.
    - a plugin that adds scripting in ruby.
    - support for interposing virtual methods in DF from C++ plugins.
    - support for creating new interface screens from C++ and lua.
    - added various other API functions.
  Notable bugfixes:
    - better terminal reset after exit on linux.
    - seedwatch now works on reclaim.
    - the sort plugin won't crash on cages anymore.
  Misc improvements:
    - autodump: can move items to any walkable tile, not just floors.
    - stripcaged: by default keep armor, new dumparmor option.
    - zone: allow non-domesticated birds in nestboxes.
    - workflow: quality range in constraints.
    - cleanplants: new command to remove rain water from plants.
    - liquids: can paint permaflow, i.e. what makes rivers power water wheels.
    - prospect: pre-embark prospector accounts for caves & magma sea in its estimate.
    - rename: supports renaming stockpiles, workshops, traps, siege engines.
    - fastdwarf: now has an additional option to make dwarves teleport to their destination.
  New commands:
    - misery: multiplies every negative thought gained (2x by default).
    - digtype: designates every tile of the same type of vein on the map for 'digging' (any dig designation).
  New tweaks:
    - tweak stable-cursor: keeps exact cursor position between d/k/t/q/v etc menus.
    - tweak patrol-duty: makes Train orders reduce patrol timer, like the binary patch does.
    - tweak readable-build-plate: fix unreadable truncation in unit pressure plate build ui.